feat: openapi migration complete HELP
